--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands=flake8 lazysecrets
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/lazysecrets
 
-commands = python setup.py test
+commands = py.test
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
