--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,11 @@ deps=flake8
 commands=flake8 lazysecrets
 
 [testenv]
+deps=pytest
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/lazysecrets
 
-commands = py.test
+commands = pytest
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
